--- a/setup.cfg
+++ b/setup.cfg
@@ -2,8 +2,11 @@
 name = pyWBE
 version = 0.0.4
 description = An open-source Wastewater-based Epidemiology Library in Python
+long_description = file: README.md, CHANGELOG.txt
+long_description_content_type = text/markdown
 url = https://github.com/illinoisdpi/pywbe
 author = Anuj Tiwari
+author_email = anujt@uic.edu
 license = MIT
 license_file = LICENSE
 platforms = win32
