--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -1,8 +1,11 @@
 name: Publish Python Package
 
 on:
-  - push
-  - pull_request
+  push:
+    branches:
+      - main
+  # - push
+  # - pull_request
 
 jobs:
   test:
