--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -34,10 +34,7 @@ jobs:
   
 
       - name: make the sphinx docs
-        run: |
-          make -C docs clean 
-          # sphinx-apidoc -f -o docs/source . -H Test -e -t docs/source/_templates
-          make -C docs html
+        run: sphinx-build -b html docs/source docs/build
 
       - name: Init new repo in dist folder and commit generated files
         run: |
