--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -40,6 +40,7 @@ jobs:
         run: |
           cd docs/build/html/
           git init
+          git config --global --add safe.directory /github/workspace/docs/build/html
           touch .nojekyll
           git add -A
           git config --local user.email "skosar2@uic.edu"
