--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -46,12 +46,4 @@ jobs:
           git config --local user.email "skosar2@uic.edu"
           git config --local user.name "skosar2"
           git commit -m 'deploy'
-      - name: Configure Git to bypass ownership check
-        run: git config --global --add safe.directory /github/workspace/docs/build/html
-      - name: Force push to destination branch
-        uses: ad-m/github-push-action@v0.5.0
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: gh-pages
-          force: true
-          directory: ./docs/build/html
+          git push --force https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}/gh-pages
