--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -1,10 +1,24 @@
 name: docs_pages_workflow
  
 # execute this workflow automatically when a we push to master
+# on:
+#   push:
+#     branches: 
+#       - main
+
+#Workflow when something is changed in src or when we push to main 
+
 on:
   push:
-    branches: 
+    branches:
       - main
+    paths:
+      - 'src/**'
+  pull_request:
+    branches:
+      - main
+    paths:
+      - 'src/**'
  
 jobs:
  
