--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - main
-      - publish-package
 
 jobs:
   test:
@@ -33,6 +32,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+
+    # Clean dist directory
+    - name: Clean dist directory
+      run: rm -rf dist/*
+
 
     # Bump version
     - name: Bump package version
