PyPi changes develop

--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -1,24 +1,25 @@
 name: Publish Python Package
 
+
+#Workflow when something is changed in src or when we push to main
+
 # on:
 #   push:
 #     branches:
 #       - main
-  # - pull_request
+#     paths:
+#       - 'src/**'
+#   pull_request:
+#     branches:
+#       - main
+#     paths:
+#       - 'src/**'
 
-#Workflow when something is changed in src or when we push to main
+#Workflow to manually publish the package 
 
-on:
-  push:
-    branches:
-      - main
-    paths:
-      - 'src/**'
-  pull_request:
-    branches:
-      - main
-    paths:
-      - 'src/**'
+on: 
+  workflow_dispatch:
+
 
 jobs:
   test:
@@ -43,8 +44,6 @@ jobs:
       
   deploy:
     needs: test
-    
-
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -52,6 +51,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+      
+# Clean dist directory
+    - name: Clean dist directory
+      run: rm -rf dist/*
+
     - name: Set up Python
       uses: actions/setup-python@v3
       with:
