--- a/setup.cfg
+++ b/setup.cfg
@@ -36,6 +36,9 @@ testing =
     mypy>=0.910
     flake8>=3.9
     tox>=3.24
+    numpy>=1.26
+    pandas>=2.1
+    matplotlib>=3.7
 
 [options.package_data]
 pyWBE = py.typed
